updated styles and layout bugs

--- a/style.less
+++ b/style.less
@@ -114,7 +114,7 @@ body, html{
 //    }
     span{
         display: block;
-        padding: 0px 0px 0px @gutter*2;
+        padding: 0px 0px 0px 32px;
         z-index: 2;
         position: relative;
         .responsiveMax(@mobile, {
@@ -397,7 +397,7 @@ blockquote{
     padding-top: @headerHeight;
     padding: @headerHeight @gutter @gutter @gutter !important;
     p{
-        margin-top: 2em;
+        margin-top: 5em;
     }
     div{
         .responsiveMax(@mobile, {
@@ -729,7 +729,7 @@ body.index{
         margin: 0px;
     }
     section{
-        padding-top: 75px;
+        padding: 15px;
         .responsiveMax(@mobile, {
             &:first-child{
                 padding-top: 0px;
